docs: fix styling for buttons on mobile (#42)

--- a/apps/docs-app/src/pages/index.module.css
+++ b/apps/docs-app/src/pages/index.module.css
@@ -20,6 +20,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: var(--ifm-global-spacing);
+}
+
+@media screen and (max-width: 576px) { 
+  .buttons a {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 /**
